# mdk-qtquick-plugin

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .qmake.conf  CMakeLists.txt  MdkPlayer.qml  README.md  build.bat  mdk-qtquick-plugin.pro  mdkdeclarativeobject.cpp  mdkdeclarativeobject.h  mdkdeclarativewrapper.cpp  mdkdeclarativewrapper.h  mdkdeclarativewrapper.pro  mdkdeclarativewrapper.qdocconf  mdkobject.cpp  mdkobject.h  mdkplayer.cpp  mdkplayer.h  mdkplayer.rc  mdkplayer_global.h  mdkwrapper.cpp  mdkwrapper.h  plugin.cpp  plugin.pro  plugins.qmltypes  qmldir  qmlplugin.pri  videotexturenode.cpp  videotexturenode.h  videotexturenode_private.cpp  videotexturenode_public.cpp
example/: CMakeLists.txt  example.manifest  example.rc  main.cpp
example/qml/: main.qml
imports/wangwenx190/QuickMdk/: MdkPlayer.qml  qmldir
